--- a/src/edu/pwr/ecolisensorsimulator/gui/home/sample.fxml
+++ b/src/edu/pwr/ecolisensorsimulator/gui/home/sample.fxml
@@ -1,8 +1,18 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="edu.pwr.ecolisensorsimulator.gui.home.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane minHeight="192.0" minWidth="315.0" prefHeight="192.0" prefWidth="345.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pwr.ecolisensorsimulator.gui.home.Controller">
+    <Label layoutX="24.0" layoutY="23.0" prefHeight="17.0" prefWidth="165.0" text="f zmierzone [MHz]" />
+    <Label layoutX="24.0" layoutY="52.0" prefHeight="17.0" prefWidth="165.0" text="Temperatura [st. C]" />
+    <TextField fx:id="inputF" layoutX="210.0" layoutY="21.0" prefHeight="27.0" prefWidth="116.0" promptText="f" />
+    <TextField fx:id="inputT" layoutX="210.0" layoutY="50.0" prefHeight="27.0" prefWidth="116.0" promptText="T" />
+    <Button fx:id="btnClear" layoutX="24.0" layoutY="91.0" mnemonicParsing="false" onAction="#clearInput" prefHeight="27.0" prefWidth="116.0" text="Wyczyść" />
+    <Button fx:id="btnStart" layoutX="210.0" layoutY="91.0" mnemonicParsing="false" onAction="#start" prefHeight="27.0" prefWidth="116.0" text="Oblicz" />
+    <Separator layoutX="-12.0" layoutY="135.0" prefHeight="0.0" prefWidth="359.0" />
+   <Label fx:id="resultText" layoutX="10.0" layoutY="137.0" prefHeight="53.0" prefWidth="323.0" text="Ilość cząsteczek DNA:" />
+</AnchorPane>
